web/kiri/index.css
/* ... */
#render-tools .pop {
    background-color: #fff;
    border: 1px solid #aaa;
    border-radius: 3px;
    position: absolute;
    margin-top: 3px;
    padding: 3px;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    white-space: nowrap;
}
#render-tools > span:not(:hover) .pop {
    display: none;
}
/** fdm extruder drop-down */
#ft-nozzle .splat {
    width: 10px;
    height: 10px;
    margin: 3px;
    border-radius: 3px;
    border: 1px solid #555;
}
#ft-nozzle > div {
    flex-direction: row;
    align-items: center;
}
/** selection rotation */
#ft-rotate {
    gap: 2px;
    grid-template-rows: auto auto auto 1fr;
    grid-template-columns: auto auto auto auto;
}
#ft-rotate label {
    padding: 0 5px 0 5px;
}
#ft-rotate label,
#ft-rotate svg,
#fr-rotate div
{
    margin: 0;
    text-align: center;
    align-self: center;
}
#ft-rotate svg {
    padding: 2px;
    margin-top: 2px;
    aspect-ratio: 2/1;
    border-radius: 3px;
    border: 1px solid transparent;
}
#ft-rotate > div:hover > svg {
    background-color: var(--main-color);
    color: white;
}
#ft-rotate > div {
    display: flex;
    align-items: center;
    justify-content: center;
}
#ft-rotate .buttons {
    align-items: stretch;
    grid-column: 1/4;
    min-width: 100px;
}
#ft-rotate button {
    justify-content: center;
}
/** selection scaling */
#ft-scale {
    gap: 3px;
    grid-template-rows: auto auto auto 1fr;
    grid-template-columns: auto auto auto 1fr;
    justify-content: stretch;
    align-items: stretch;
}
#ft-scale > div {
    align-items: center;
    flex-direction: row;
}
#ft-scale > input {
    margin: 0;
}
#ft-scale > div > label {
    flex-grow: 1;
    text-align: center;
}
#ft-scale > div > input {
    position: absolute;
    right: 0;
}
#ft-scale .buttons {
    grid-column: 1/4 !important;
}
/** selection mesh actions */
#ft-mesh-btn {
    display: grid;
    grid-auto-flow: row;
    grid-template-rows: 1fr;
}
#ft-mesh-btn button {
    justify-content: center;
    flex-grow: 1;
}
#ft-mesh label {
    font-size: smaller;
}
#ft-mesh .value {
    font-family: monospace;
    padding-left: 4px;
}
#mesh-info {
    margin: 2px 1px 1px 1px;
}
#mesh-info label, #mesh-info span {
    align-self: unset !important;
    margin: 0;
}
#mesh-info span {
    display: inline-flex;
    align-items: center;
}
#mesh-info .em1 span {
    min-width: 1em;
}
#mesh-info .em3 span {
    min-width: 3.5em;
}
#lay-flat.selected {
    background-color: var(--main-color);
}

#act-animate.disabled {
    color: #aaa !important;
}

.dev-buttons {
    margin: 1px -1px 0 -1px;
}
.dev-buttons button {
    margin-left: 2px;
    margin-right: 2px;
    padding-bottom: 2px;
}
#dg .ext-buttons button {
    cursor: pointer;
}
.ext-buttons button {
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-grow: 1;
    margin-top: 3px;
    height: 75%;
}
.ext-buttons label {
    font-size: smaller;
    margin: 3px 0 3px 0;
}
.txt-sel {
    background-color: #eee;
}
.txt-sel button, .btn-sel {
    background-color: var(--highlight);
}

#end {
    left: 0;
    right: 0;
    bottom: 0;
    position: fixed;
    text-align: center;
    font-size: smaller;
}

#camop_dialog {
    flex-direction: column;
}
#camop_dialog textarea {
    border: 1px solid gray;
    margin: 5px 1px 5px 1px;
}
#camop_dialog button,
#camop_dialog label
{
    text-align: center;
    display: block;
}
#camops {
    display: flex;
    padding: 5px 0 0 0;
    max-height: 70vh;
    /* overflow-y: auto; */
}
.cam-pop-op {
    top: 50%;
    right: calc(100% + 4px);
    text-align: left;
    position: absolute;
    white-space: nowrap;
    flex-direction: column;
    background-color: #fff;
    border: 1px solid #aaa;
    border-radius: 5px;
    margin-right: 6px;
    padding: 5px 3px 5px 3px;
    gap: 1.5px;
}
.pop-tics {
    position: absolute;
    left: -1px;
    right: -1px;
    bottom: 100%;
    margin: 0 0 2px 0;
}
.pop-tics > div {
    gap: 3px;
    padding: 5px;
    width: 100%;
    max-width: 100%;
    overflow: hidden;
    font-size: 11px;
    flex-direction: row;
    background-color: rgba(255,255,255,0.6);
    border: 1px solid rgba(0,0,0,0.25);
    border-radius: 5px;
    word-break: break-word;
    white-space: normal;
}
#oplist {
    gap: 3px;
    margin-bottom: 3px;
}
#oplist .clock {
    border: 0;
    background-color: var(--blue-3);
}
#camops .set-sep {
    margin-bottom: 4px;
}
#oplist .clock:hover {
    background-color: var(--blue-2);
}
#oplist > div {
    padding: 5px 20px 5px 7px !important;
}
#oplist > div, .opdiv {
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
    border: 1px solid rgba(0,0,0,0.25);
    border-radius: 4px;
    padding: 5px 10px 5px 10px;
    background-color: rgba(255,255,255,0.75);
    white-space: nowrap;
}
#oplist > div:hover, #op-add:hover {
    background-color: var(--blue-4);
}
#oplist > div.editing, #lzr-surface button.editing {
    background-color: rgba(190,230,190,0.85);
}
#oplist .drag {
    background-color: var(--highlight) !important;
}
#oplist .notime {
    background-color: rgba(150,150,150,0.5) !important;
}
#oplist .disabled {
    background-color: rgba(125,125,125,0.5) !important;
}
#oplist div .label {
    pointer-events: none;
}
#oplist div .del {
    position: absolute;
    right: 6px;
    font-size: 14px;
    color: rgba(0,0,0,0.25);
}
#oplist div:hover .del {
    color: #888;
    z-index: 103;
}
#oplist div .del:hover {
    color: #000;
}
#oplist div .opop {
    position: absolute;
    bottom: 100%;
    white-space: pre;
    font-family: monospace;
    font-size: smaller;
    text-align: left;
    margin: 2px;
    padding: 5px;
    display: none;
}
#oplist div:hover .opop {
    display: flex;
}
.mobile #oplist {
    font-size: larger;
}
.mobile #op-add-pop {
    font-size: larger;
}
#op-add-pop {
    position: absolute;
    display: none;
    top: 0;
    right: 100%;
    transform: translateY(-50%);
}
/* ... */

